--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "test": "vitest"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^3.0.0",
-    "@11ty/eleventy-img": "^6.0.2",
-    "@11ty/eleventy-plugin-rss": "^2.0.3",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+    "@11ty/eleventy": "^3.1.2",
+    "@11ty/eleventy-img": "^6.0.4",
+    "@11ty/eleventy-plugin-rss": "^2.0.4",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.2",
     "@11ty/eleventy-plugin-webc": "^0.11.2",
     "@11ty/webc": "^0.11.4",
     "@types/11ty__eleventy-img": "^4.0.0",
-    "ical-generator": "^8.1.1",
-    "js-yaml": "4.1.1",
+    "ical-generator": "^10.0.0",
+    "js-yaml": "^4.1.1",
     "markdown-it": "^14.1.0",
     "opml-generator2": "^1.0.3",
-    "pagefind": "^1.3.0",
-    "vitest": "^3.1.2"
+    "pagefind": "^1.4.0",
+    "vitest": "^4.0.18"
   }
 }
